corregi error de imagen envios

--- a/Pages/envios.html
+++ b/Pages/envios.html
@@ -48,7 +48,7 @@
         </header>
 
         <main class="mainEnvios">
-            <div class="card mb-3">
+            <div class="cardi mb-3">
                 <img src="https://d3ugyf2ht6aenh.cloudfront.net/stores/528/608/themes/style/1-slide-1648038959877-1677272972-d182cac1f67dd44a31155ea2e2fc8b5c1648038988-1920-1920.webp?925152807" class="card-img-top" alt="imagen de envios">
                 <div class="card-body">
                   <h5 class="card-title">ENVIOS</h5>
