correccion de logo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
            <h1 class="titulo">SOMOS LA PATISSERIE. ALEGRANDO TUS MOMENTOS, <span>siempre </span> 
            </h1>
        </header>
-       <main>
+       <main class="main">
         <div id="imagenFondoMacarons">
             <p id="letraImagen">Hacemos pasteleria clasica con ingredientes sumamente seleccionados, organicos y de calidad. 
                 <br>
